--- a/src/CMFPlanner.UI/TriplanarViewer.xaml
+++ b/src/CMFPlanner.UI/TriplanarViewer.xaml
@@ -74,6 +74,7 @@
                         <Grid.ContextMenu><x:Null/></Grid.ContextMenu>
                         <Image x:Name="AxialImage" Stretch="Fill"
                                RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                        <Canvas x:Name="AxialGridCanvas" Width="1" Height="1" IsHitTestVisible="False"/>
                         <Canvas x:Name="AxialCanvas" Width="1" Height="1" IsHitTestVisible="False">
                             <Line x:Name="AxialHLine" Stroke="#44BB44" StrokeThickness="0.8"/>
                             <Line x:Name="AxialVLine" Stroke="#FF8800" StrokeThickness="0.8"/>
@@ -101,6 +102,7 @@
                         <Grid.ContextMenu><x:Null/></Grid.ContextMenu>
                         <Image x:Name="CoronalImage" Stretch="Fill"
                                RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                        <Canvas x:Name="CoronalGridCanvas" Width="1" Height="1" IsHitTestVisible="False"/>
                         <Canvas x:Name="CoronalCanvas" Width="1" Height="1" IsHitTestVisible="False">
                             <Line x:Name="CoronalHLine" Stroke="#4488FF" StrokeThickness="0.8"/>
                             <Line x:Name="CoronalVLine" Stroke="#FF8800" StrokeThickness="0.8"/>
@@ -128,6 +130,7 @@
                         <Grid.ContextMenu><x:Null/></Grid.ContextMenu>
                         <Image x:Name="SagittalImage" Stretch="Fill"
                                RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                        <Canvas x:Name="SagittalGridCanvas" Width="1" Height="1" IsHitTestVisible="False"/>
                         <Canvas x:Name="SagittalCanvas" Width="1" Height="1" IsHitTestVisible="False">
                             <Line x:Name="SagittalHLine" Stroke="#4488FF" StrokeThickness="0.8"/>
                             <Line x:Name="SagittalVLine" Stroke="#44BB44" StrokeThickness="0.8"/>
